# ser-progress-replication

./: LICENSE  README.md  pyproject.toml
analysis/: define.py
analysis/plots/: aibo_tuning.py  msp_tuning.py
audio-experiments/: README.md  data.py
audio-experiments/conf/: aibo.2cl.exploration.yaml  aibo.2cl.tuning.yaml  aibo.5cl.exploration.yaml  aibo.5cl.tuning.yaml  msp.exploration.yaml  msp.tuning.yaml
audio-experiments/conf/dataset/: AIBO-2cl-ComParE-func.yaml  AIBO-2cl-ComParE-llds.yaml  AIBO-2cl-IS09-func.yaml  AIBO-2cl-IS09-llds.yaml  AIBO-2cl-IS10-func.yaml  AIBO-2cl-IS10-llds.yaml  AIBO-2cl-IS11-func.yaml  AIBO-2cl-IS11-llds.yaml  AIBO-2cl-IS12-func.yaml  AIBO-2cl-IS12-llds.yaml  AIBO-2cl-IS13-func.yaml  AIBO-2cl-IS13-llds.yaml  AIBO-2cl-eGeMAPS-func.yaml  AIBO-2cl-eGeMAPS-llds.yaml  AIBO-2cl-mel-16k.yaml  AIBO-2cl-wav.yaml  AIBO-5cl-ComParE-func.yaml  AIBO-5cl-ComParE-llds.yaml  AIBO-5cl-IS09-func.yaml  AIBO-5cl-IS09-llds.yaml  AIBO-5cl-IS10-func.yaml  AIBO-5cl-IS10-llds.yaml  AIBO-5cl-IS11-func.yaml  AIBO-5cl-IS11-llds.yaml  AIBO-5cl-IS12-func.yaml  AIBO-5cl-IS12-llds.yaml  AIBO-5cl-IS13-func.yaml  AIBO-5cl-IS13-llds.yaml  AIBO-5cl-eGeMAPS-func.yaml  AIBO-5cl-eGeMAPS-llds.yaml  AIBO-5cl-mel-16k.yaml  AIBO-5cl-wav.yaml  MSPPodcast-ComParE-func.yaml  MSPPodcast-ComParE-llds.yaml  MSPPodcast-IS09-func.yaml  MSPPodcast-IS09-llds.yaml  MSPPodcast-IS10-func.yaml  MSPPodcast-IS10-llds.yaml  MSPPodcast-IS11-func.yaml  MSPPodcast-IS11-llds.yaml  (+8 more)
text-experiments/bert-models/: datasets.py  train_bert.py  utils.py
text-experiments/llms/: data.py  qlora_ft.py
(+23 files in other folders)
